--- a/index.html
+++ b/index.html
@@ -11,25 +11,28 @@
 
     </head>
     <body>
-        
-        <header>
-            <h1>
-                Het witte doek
-            </h1>
-            <nav>
-                <ul>
-                    <li> <a href=" ">Home</a> </li>
-                    <li> <a href=" ">Programma</a> </li>
-                    <li> <a href=" ">Over ons</a> </li>
-                    <li> <a href=" ">Contact</a> </li>
-                </ul>
-            </nav>
-
-        </header>
-
+               
         <main>
-            <div class="o-grid">
-                <div class="o-grid__item "></div>
+            <div class="o-flex">
+                <div class="o-flex__item o-flex__header">
+                    <h1>
+                        Het witte doek
+                    </h1>
+                    <nav>
+                        <ul>
+                            <li> <a href=" ">Home</a> </li>
+                            <li> <a href=" ">Programma</a> </li>
+                            <li> <a href=" ">Over ons</a> </li>
+                            <li> <a href=" ">Contact</a> </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="o-flex__item o-flex__main">
+
+                </div>
+                <div class="o-flex__item o-flex__footer">
+
+                </div>
             </div>
 
         </main>
